# asam_open_odd_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: CheckNode.msg  Cod.msg  ConceptValue.msg  LabelTruth.msg  ModuleReport.msg  OddReport.msg  SpatialExtent.msg  TaxonomyValue.msg
srv/: CheckOdd.srv
